// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectButtonGroup Controlled behavior should render correctly 1`] = `
<SelectButtonGroup
  context={null}
  defaultValue={null}
  isBlock={false}
  isEqualWidth={false}
  isMultiselect={false}
  isRequired={false}
  onChange={[MockFunction]}
  size="normal"
  value={
    Array [
      "1",
    ]
  }
>
  <div
    className="SelectButtonGroup"
  >
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={true}
      key="1"
      onChange={[Function]}
      size="normal"
      value="1"
    >
      <div
        className="SelectButton SelectButton--context_brand SelectButton--isSelected"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 1
      </div>
    </SelectButton>
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={false}
      key="2"
      onChange={[Function]}
      size="normal"
      value="2"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 2
      </div>
    </SelectButton>
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={false}
      key="3"
      onChange={[Function]}
      size="normal"
      value="3"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 3
      </div>
    </SelectButton>
  </div>
</SelectButtonGroup>
`;

exports[`SelectButtonGroup should render correctly 1`] = `
<SelectButtonGroup
  context={null}
  defaultValue={
    Array [
      "1",
    ]
  }
  isBlock={false}
  isEqualWidth={false}
  isMultiselect={false}
  isRequired={false}
  onChange={null}
  size="normal"
  value={null}
>
  <div
    className="SelectButtonGroup"
  >
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={true}
      key="1"
      onChange={[Function]}
      size="normal"
      value="1"
    >
      <div
        className="SelectButton SelectButton--context_brand SelectButton--isSelected"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 1
      </div>
    </SelectButton>
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={false}
      key="2"
      onChange={[Function]}
      size="normal"
      value="2"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 2
      </div>
    </SelectButton>
    <SelectButton
      context="brand"
      isBlock={false}
      isEqualWidth={false}
      isSelected={false}
      key="3"
      onChange={[Function]}
      size="normal"
      value="3"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        size="normal"
        tabIndex={0}
      >
        Option 3
      </div>
    </SelectButton>
  </div>
</SelectButtonGroup>
`;
